cmake_minimum_required(VERSION 3.12)
project(work2)

set(CMAKE_CXX_STANDARD 11)

add_executable(work2 main.cpp interface.h TheEmpolyee.cpp TheEmpolyee.h ThePlane.cpp ThePlane.h TheFlight.cpp TheFlight.h TheCustomer.cpp TheCustomer.h TheReservation.cpp TheReservation.h TableGeneric.cpp TableGeneric.h MyImplementation.h IdSuplier.cpp IdSuplier.h MyDate.cpp MyImplementation.cpp)